<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>com.centit.framework</groupId>
        <version>JDK21-SNAPSHOT</version>
        <artifactId>centit-framework-dependencies</artifactId>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.centit.support</groupId>
    <artifactId>centit-persistence</artifactId>
    <packaging>pom</packaging>
    <version>JDK21-SNAPSHOT</version>
    <name>com.centit.support:centit-persistence</name>
    <description>框架持久化包， 有三个子模块分别对应 hibernate、mybatis和spring jdbc template 三个实现方式。
    </description>
    <url>https://github.com/ndxt/centit-persistence</url>

    <organization>
        <name>江苏南大先腾信息产业股份有限公司</name>
        <url>www.centit.com</url>
    </organization>

    <modules>
        <module>centit-database</module>
        <module>centit-database-datasource</module>
        <module>centit-database-transaction</module>
        <module>centit-persistence-jdbc</module>
        <module>centit-persistence-jdbc-config</module>
        <module>centit-database-dynamic-datasource</module>
        <module>centit-persistence-redis-config</module>
    </modules>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>杨淮生</name>
            <email>codefan@sina.com</email>
            <organization>centit.com</organization>
            <organizationUrl>http://www.centit.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>
            scm:git:https://github.com/ndxt/centit-persistence.git
        </connection>
        <developerConnection>
            scm:git:https://github.com/ndxt/centit-persistence.git
        </developerConnection>
        <url>https://github.com/ndxt/centit-persistence</url>
        <tag>v1.12</tag>
    </scm>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- 打包时添加源码 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>
</project>
